Chart elements are rendered incorrectly on chartjs.org
Categories
(Core :: Graphics: Canvas2D, defect)
Tracking
()
| Tracking | Status | |
|---|---|---|
| relnote-firefox | --- | 116+ |
| firefox-esr102 | --- | unaffected |
| firefox-esr115 | --- | unaffected |
| firefox116 | + | verified |
| firefox117 | + | verified |
| firefox118 | + | verified |
People
(Reporter: ksenia, Assigned: jrmuizel)
References
(Regression, )
Details
(Keywords: regression)
Attachments
(3 files)
|
233.08 KB,
image/png
|
Details | |
|
48 bytes,
text/x-phabricator-request
|
diannaS
:
approval-mozilla-beta+
diannaS
:
approval-mozilla-release+
|
Details | Review |
|
294 bytes,
text/html
|
Details |
This was originally reported in https://github.com/webcompat/web-bugs/issues/124731
To reproduce, visit https://www.chartjs.org/docs/latest/samples/bar/border-radius.html in Firefox Nightly or release on Windows
Expected:
Vertical bar charts are displayed with 2 border radius variations
Actual:
Border radius is applied incorrectly
Note: The issue is not reproducible on MacOS.
From mozregression:
Differential Revision: https://phabricator.services.mozilla.com/D181542
2023-08-01T17:00:51.622000: DEBUG : Did not find a branch, checking all integration branches
2023-08-01T17:00:51.623000: INFO : The bisection is done.
2023-08-01T17:00:51.624000: INFO : Stopped
| Reporter | ||
Comment 1•3 years ago
|
||
Hello Jeff, wonder if you could take a look at this, please?
Comment 2•3 years ago
|
||
Set release status flags based on info from the regressing bug 1839470
| Assignee | ||
Updated•3 years ago
|
| Assignee | ||
Comment 3•3 years ago
|
||
It looks like bug 1839470 exposed an existing bug in PathD2D::Arc
Updated•3 years ago
|
Comment 4•3 years ago
|
||
It seems like mochitest test_canvas.html is not enabled on Windows either, which is where we have a lot of canvas arc coverage. I wonder if those would have caught the bug. It looks like bug 1464181 disabled those, during the early WebRender development era (the mochitest.ini line implicates bug 1464173, though the actual change was bug 1464181).
| Assignee | ||
Comment 5•3 years ago
|
||
This should roughly approximate the behaviour we had prior to bug 1839470
| Assignee | ||
Comment 7•3 years ago
|
||
Comment on attachment 9347035 [details]
Bug 1846613. Use ArcToBezier for D2D until the D2D Arc bugs are fixed.
Beta/Release Uplift Approval Request
- User impact if declined: We'll sometimes draw arcs in canvas the wrong way.
- Is this code covered by automated tests?: No
- Has the fix been verified in Nightly?: No
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): This makes us use the same ArcToBezier path for arcs that we were previously using directly in canvas. It has been manually verified to fix the chartjs issue.
- String changes made/needed:
- Is Android affected?: No
Comment 8•3 years ago
|
||
Comment on attachment 9347035 [details]
Bug 1846613. Use ArcToBezier for D2D until the D2D Arc bugs are fixed.
Approved for 117.0b3
Approved for 116.0.1 dot release
Comment 10•3 years ago
|
||
| uplift | ||
Updated•3 years ago
|
Comment 11•3 years ago
|
||
| bugherder | ||
Comment 12•3 years ago
|
||
The two arcs should look the same.
Updated•3 years ago
|
Updated•3 years ago
|
Comment 16•3 years ago
•
|
||
Reproduced with Fx 118.0a1 (2023-08-02).
Verified fixed with Fx 118.0a1 (2023-08-03), 117.0b3 and 116.0.1.
Tested on Windows 10.
Description
•