Bug 1846613. Use ArcToBezier for D2D until the D2D Arc bugs are fixed. r=ahale, a=dsmith

This should roughly approximate the behaviour we had prior to bug 1839470

Differential Revision: https://phabricator.services.mozilla.com/D185217